# AI_TestTask

./: pyproject.toml
app/: main.py  model_loader.py  schemas.py
notebooks/: 01_data_exploration.ipynb
static/: index.html
tests/: test_poetry_setup.py
