[tool.poetry]
name = "ai-testtask"
version = "0.1.0"
description = "FastAPI ML"
authors = [
    {name = "Sergey Leonovich",email = "put_theport@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11"
packages = [{include = "app"}]
dependencies = [
]

[tool.poetry.dependencies]
python = "^3.9"

# Для ML
tensorflow = "2.13.0"
scikit-learn = "1.3.0"

# Обработка изображений
pillow = "10.0.1"
opencv-python = "4.8.1.78"

# Анализ данных
numpy = "1.24.3"
pandas = "2.0.3"
matplotlib = "3.7.2"
seaborn = "0.12.2"
jupyter = "1.0.0"

# FastAPI и вебуха
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.4.2"
python-multipart = "0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
black = "23.9.1"
flake8 = "6.1.0"
mypy = "1.6.1"
pre-commit = "3.4.0"
jupyterlab = "4.0.5"

[tool.poetry.scripts]
start = "app.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
